[package]
name = "micro-claw"
version = "0.1.0"
edition = "2026"

[dependencies]
# Architecture support
riscv-rt = "0.12"
cortex-m-rt = "0.7"
panic-halt = "0.2"

# Efficient Data Handling
heapless = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.5"

[profile.release]
opt-level = "z"      # Size optimization
lto = true           # Link-time optimization
codegen-units = 1
panic = "abort"
strip = true