[package]
name = "micro-claw"
version = "0.1.0"
edition = "2021"
authors = ["MicroClaw Team"]

[dependencies]
# Architecture: RISC-V (The "Krill" standard)
riscv = "0.10"
riscv-rt = "0.12"
panic-halt = "0.2"

# Embedded Utilities
embedded-hal = "1.0"
nb = "1.1"

# Efficient Data Handling
heapless = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.5"

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Link Time Optimization
codegen-units = 1
panic = "abort"
strip = true         # Strip symbols to save space